[metadata]
author = Dwight Hubbard
author_email = dhubbard@verizonmedia.com
description-file = README.rst
name = invirtualenv
url = https://github.com/yahoo/invirtualenv

[options]
install_requires =
    jinja2
    requests
    six>=1.5
    virtualenv
    wheel
    configparser
	urllib3<1.25;  python_version<"3.4"

packages =
    invirtualenv
    invirtualenv_plugins
    invirtualenv_plugins.rpm_scripts

[options.entry_points]
console_scripts =
    invirtualenv=invirtualenv.cli:main
invirtualenv.plugin =
    docker        = invirtualenv_plugins.docker:InvirtualenvDocker
    parsedconfig  = invirtualenv_plugins.parsedconfig:InvirtualenvParsedConfig
    rpm           = invirtualenv_plugins.rpm:InvirtualenvRPM

[bdist_wheel]
universal=1
