[metadata]
author = Dwight Hubbard
author_email = 254983+dwighthubbard@users.noreply.github.com
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = Tool to abstract host deployment of Python packages
description_content_type = text/markdown
description-file = README.rst
keywords = packaging deployment
license = BSD License
license_file = LICENSE.txt
long_description = file:README.md
long_description_content_type = text/markdown
name = invirtualenv
project_urls =
    Source Code = https://github.com/yahoo/invirtualenv
    Documentation = https://invirtualenv.readthedocs.io/en/latest/?badge=latest
url = https://github.com/yahoo/invirtualenv
version = 20.3.24

[options]
install_requires =
    defusedxml
    distro
    jinja2
    requests>=2.22.0
    six>=1.5
    virtualenv
    wheel
    urllib3
    configparser;  python_version<"3.4"

packages =
    invirtualenv
    invirtualenv_plugins
    invirtualenv_plugins.rpm_scripts

python_requires = >=2.7.5
zip_safe = True

[options.entry_points]
console_scripts =
    invirtualenv=invirtualenv.cli:main
invirtualenv.plugin =
    docker        = invirtualenv_plugins.docker:InvirtualenvDocker
    parsedconfig  = invirtualenv_plugins.parsedconfig:InvirtualenvParsedConfig
    rpm           = invirtualenv_plugins.rpm:InvirtualenvRPM

[options.extras_require]
test =
    pytest
    pytest-cov
    vcrpy-unittest

doc_build =
    sphinx
    sphinx_bootstrap_theme
    guzzle_sphinx_theme
    sphinx_rtd_theme
    recommonmark

[bdist_wheel]
universal=1

[screwdrivercd.version]
version_type = sdv4_date

